# public_sscce

./: README.md
delegate_data/: FruitModel.qml  MyListView.qml  README.md  delegate_data.qml
plugins-using-typeid/: CMakeLists.txt  README.md  main.cpp  mydependency.cpp  mydependency.h  myplugin.cpp  myplugin.h  myplugininterface.h  otherplugin.cpp  otherplugin.h  sometype.h
